Made it so that you dont loose focus of the text box after clicking the send button to prevent the chat box from disappearing on small screens and fixed issue in which the chatbox text would overflow out of the bottom.

--- a/public/room.css
+++ b/public/room.css
@@ -100,6 +100,7 @@ video {
 .chatWrapper {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 
 }
 
